<resources>
    <string name="app_name">UnderFest</string>
    <string name="projeto">Foz do Iguaçu é sempre tida como uma cidade multicultural e faz
juz ao título possuindo comunidades relevantes de diversas culturas
estrangeiras como a arabe e a asiática.\n
        \n
No campo das expressões culturais tipicamente joviais essa
diversidade também se expressa na forma das muitas tribos e grupos
facilmente identificáveis por seus gostos musicais, muitos destes grupos
mais vinculados ao alternativo, urbano e underground.\n
        \n
Nessa mescla que é o underground encontramos o hip hop
expressão de liberdade e da fúria tão natural aos jovens brasileiros,
muitos construindo suas vivências tendo como trilha sonora trap e rap
devidamente intercalados.\n
        \n
Para celebrar esse sentimento compartilhado por tantos e
expresso por vozes marginalizadas que o UNDER FEST nasce, para
desta forma fortalecer essa semente já plantada em Foz do Iguaçu.

</string>
    <string name="iniciativa">O UNDER FEST é a primeira iniciativa iguaçuense para a criação
de um festival deste nicho, já explorado por diversas capitais brasileiras.
Estes festivais que já ocorreram já deixaram claro que esta é uma
expressão cultural e musical que veio para ficar, movimentando pessoas
do Brasil inteiro.\n
        \n
O festival “CENA” em sua edição de 2022 chegou a receber 70 mil
pessoas e contava com nomes como Djonga, BK, Drika Barbosa e
Racionais MC.\n
        \n
Para essa nossa primeira edição temos como meta receber de 8 a
10 mil pessoas, colocando Foz do Iguaçu no mapa dos eventos
musicais. E como a proposta é um festival e não apenas um show,
visamos criar diversos espaços interativos no evento como skate,
slackline, arte, grafite, tatuagem, batalhas de rima, dança e muita
música.\n
        \n
Além de muita interação social, esses espaços devem promover
de forma ativa as marcas locais sejam de comércio de bens como de
serviços. Uma vez aqui, nosso público já é um turista com muito a
explorar na cidade e nosso festival será o primeiro local a panfletar
nossas maravilhas para eles.\n
        \n
O nosso festival visa criar esse ambiente multicultural e diverso
enquanto apresentamos e explorando todo o potencial turístico da
cidade das Cataratas.\n
        \n
Ainda que o turismo já seja um ramo consolidado e de sucesso
inquestionável em nossa cidade, o festival vem para movimentar Foz do
Iguaçu em sua baixa temporada e nos marcar no imaginário de uma
juventude que em sua maioria teve a pandemia como marco importante
de seu desenvolvimento e que volta a sair e explorar o mundo somente
agora
</string>
    <string name="potencial_turistico">Potencial Turistico</string>
    <string name="Estrutura">-palco\n-som\n-iluminação\n-grades\n-microfones\n-controladora de som</string>
    <string name="lucrotext">O UnderFest visa explorar esse potencial enorme da cidade e a crescente no turismo, trazendo mais atrações de diversos nichos interligados que atraem pessoas do Brasil inteiro.\n
\n
A ideia do turismo convencional que a cidade vem trazendo nos ultimos anos, sem duvidas, tem funcionado de maneira exemplar… Porém com a volta forte de eventos acontecendo pais a fora, mais jovens atingido idades e liberdade financeiras, eventos desse porte podem ser uma maneira, outrora ignorada na cidade, extremamente interessante para se investir.\n
\n
Além disso, executar esse evento em datas onde o turismo convencional atual em baixa, é uma estratégia pensada para eliminar essas baixas que por sua vez, dobrará o movimento turistico na cidade. O UnderFest é um evento com potencial enorme de colocar Foz do Iguaçu no calendario nacional de festivais.\n
\n
Já falamos do potencial turistico e cultural para a cidade, mas de quantos reais serão gastos ao todo para a execução deste festival ? Pela nossas apurações entre estrutura e atrações serão gastos em torno de 178mil reais, com lucros previsto para 250mil à 300mil em sua primeirissima edição.\n
</string>
    <string name="custo_total">Custo total: 178.000R$\n lucro previsto:300.000R$</string>
    <string name="estrutura_do_evento">Estrutura do evento</string>
    <string name="valor_estrutura">25.000 R$</string>
    <string name="locacao">Locação:Centro de convenções</string>
    <string name="valor_locacao">10.000 R$</string>
    <string name="stands_e_estruturas">Stands e estruturas de\n entretenimento</string>
    <string name="seguranc">Segurança e equipe medica</string>
    <string name="valor_total">55.000 R$</string>
    <string name="gasto_total">gasto total em\n estrutura e segurança</string>
    <string name="cache">cache</string>
    <string name="ouvintes">ouvintes</string>
    <string name="inscritos">inscritos</string>
    <string name="seguidores">Seguidores</string>
    <string name="nome">Nome</string>
    <string name="respiramos_o_underground">Respiramos o underground</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
