<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_card">

    <ImageView
        android:id="@+id/ArtistaImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/linha_ouvintes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/viewNome"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/custom_view_top"
        app:layout_constraintBottom_toTopOf="@+id/ArtistaImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/NomeArtista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/nome"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ArtistaImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/linha_seguidores"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/custom_view_top"
        app:layout_constraintBottom_toTopOf="@id/linha_inscritos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/linha_inscritos"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@id/linha_ouvintes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/linha_ouvintes"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/linha_cache"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/linha_cache"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_view_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/yelow"
        app:layout_constraintBottom_toTopOf="@id/ouvintes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Inscritos" />

    <View
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:background="@color/yelow"
        app:layout_constraintBottom_toTopOf="@id/cache"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NomeArtista" />

    <View
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:background="@color/yelow"
        app:layout_constraintBottom_toTopOf="@id/cache"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NomeArtista" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toBottomOf="@id/linha_seguidores"
        app:layout_constraintEnd_toStartOf="@id/Seguidores"
        app:layout_constraintTop_toTopOf="@id/linha_seguidores"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/youtube"
        app:layout_constraintBottom_toBottomOf="@id/Inscritos"
        app:layout_constraintEnd_toStartOf="@id/Inscritos"
        app:layout_constraintTop_toTopOf="@id/Inscritos"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/spotifylogo"
        app:layout_constraintBottom_toBottomOf="@id/ouvintes"
        app:layout_constraintEnd_toStartOf="@id/ouvintes"
        app:layout_constraintTop_toTopOf="@id/ouvintes"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/reais"
        app:layout_constraintBottom_toBottomOf="@id/cache"
        app:layout_constraintEnd_toStartOf="@id/cache"
        app:layout_constraintTop_toTopOf="@id/cache"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/Seguidores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/staatliches"
        android:text="@string/seguidores"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/linha_seguidores"
        app:layout_constraintStart_toStartOf="@id/linha_seguidores"
        app:layout_constraintTop_toTopOf="@id/linha_seguidores" />

    <TextView
        android:id="@+id/Inscritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/staatliches"
        android:text="@string/inscritos"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/linha_inscritos"
        app:layout_constraintStart_toStartOf="@id/linha_inscritos"
        app:layout_constraintTop_toTopOf="@id/linha_inscritos" />

    <TextView
        android:id="@+id/ouvintes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/staatliches"
        android:text="@string/ouvintes"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/linha_ouvintes"
        app:layout_constraintStart_toStartOf="@id/linha_ouvintes"
        app:layout_constraintTop_toTopOf="@id/linha_ouvintes" />

    <TextView
        android:id="@+id/cache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/staatliches"
        android:text="@string/cache"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/linha_cache"
        app:layout_constraintStart_toStartOf="@id/linha_cache"
        app:layout_constraintTop_toTopOf="@id/linha_cache" />


</androidx.constraintlayout.widget.ConstraintLayout>